src/test/ui/empty/empty-struct-braces-pat-1.stderr
error[E0532]: expected unit struct, unit variant or constant, found struct variant `E::Empty3`
  --> $DIR/empty-struct-braces-pat-1.rs:24:9
   |
LL |     Empty3 {}
   |     --------- `E::Empty3` defined here
...
LL |         E::Empty3 => ()
   |         ^^^^^^^^^ help: use struct pattern syntax instead: `E::Empty3 {}`

error[E0532]: expected unit struct, unit variant or constant, found struct variant `XE::XEmpty3`
  --> $DIR/empty-struct-braces-pat-1.rs:31:9
   |
LL |         XE::XEmpty3 => ()
   |         ^^^^^^^^^^^
   | 
  ::: $DIR/auxiliary/empty-struct.rs:6:5
   |
LL |     XEmpty3 {},
   |     ------- `XE::XEmpty3` defined here
LL |     XEmpty4,
   |     ------- similarly named unit variant `XEmpty4` defined here
   |
help: use struct pattern syntax instead
   |
LL |         XE::XEmpty3 { /* fields */ } => ()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: a unit variant with a similar name exists
   |
LL |         XE::XEmpty4 => ()
   |             ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0532`.
